# agentwatch

./: Cargo.toml  PLAN.md  PROVIDERS.md  README.md  TEAM_BUILDER.md  demo.tape
src/: app.rs  builder.rs  event.rs  lib.rs  main.rs  theme.rs
src/data/: contract.rs  insights.rs  invocations.rs  mod.rs  paths.rs  pricing.rs  provider.rs  source.rs  team.rs  team_tags.rs  threads.rs  types.rs
src/driver/: inbox.rs  mod.rs  runner.rs
src/ui/: agents.rs  bot.rs  chrome.rs  console.rs  cost.rs  insights.rs  mod.rs  models.rs  overview.rs  plans.rs  sessions.rs  team_builder.rs  thread.rs  tools.rs
