[package]
name = "agentwatch-tui"
version = "0.1.0"
edition = "2021"
authors = ["Matt Hartley <matthew.t.hartley@gmail.com>"]
description = "Single-host TUI for driving and observing agentic AI workflows (neo runtime)."
license = "MIT"
repository = "https://github.com/matthart1983/agentwatch"
readme = "README.md"
keywords = ["agents", "tui", "terminal", "llm", "neo"]
categories = ["command-line-utilities"]

[lib]
name = "agentwatch"
path = "src/lib.rs"

[[bin]]
name = "agentwatch"
path = "src/main.rs"

[dependencies]
ratatui = "0.27"
crossterm = "0.27"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "net", "time"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
clap = { version = "4", features = ["derive"] }
notify = "6"
uuid = { version = "1", features = ["v4", "serde"] }
tui-textarea = "0.5"

[features]
default = []
# Connect to the (future) neo-agentd unix socket for sub-second updates.
agentd = []
# Snapshot + diff + recording. Mirrors the netwatch/syswatch/diskwatch flag.
replay = []
